[project]
name = "dojopop-drive-backup"
version = "0.1.0"
description = "Google Drive backup tooling for DojoPop / Obsidian LiveSync"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
]

[tool.uv]
package = false
