[project]
name = "tenshinryu-wiki"
version = "0.1.0"
description = "Static site builder for Tenshinryu Hyoho Wiki"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-httplib2>=0.2.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "pyyaml>=6.0",
]

[tool.uv]
package = false
